feat: get rsvps per query
